# meisterAI

./: README.md  main.py  pyproject.toml  rag-test.py
chroma_db/: chroma.sqlite3
chroma_db/f4900683-8aa7-4cde-bbce-bbf8eecf23e4/: index_metadata.pickle
data/indexes/: bm25.pkl
src/: app.py
src/api/: api.py
src/api/routes/: chat.py
src/ingestion/: chunker.py  embedder.py  ingest.py  loader.py
src/ingestion/chroma_db/: chroma.sqlite3
src/llm/: assistant.py  ollama_client.py  prompt.py
src/reranking/: cross_encoder.py
src/retrieval/: bm25.py  hybrid.py  initial_reranker.py  retriever.py  search.py  vector_search.py
src/utils/: metadata_parser.py
