[project]
name = "meisterai"
version = "0.1.0"
description = "MeisterAI is an AI-powered Retrieval-Augmented Generation (RAG) application designed to help in diagnosing, maintaining, and repairing German vehicles."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "easyocr>=1.7.2",
    "fastapi>=0.139.0",
    "langchain>=1.3.13",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.5",
    "langchain-text-splitters>=1.1.2",
    "pymupdf>=1.28.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.6.0",
    "uvicorn>=0.49.0",
]
